# stayke

./: .env.example  README.md  stayke_architecture_report.md
backend/: .env.example  README.md  constants.ts  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json  vitest.config.js
backend/.husky/: pre-commit
backend/scripts/: migrate.ts
backend/src/: index.ts  server.ts
backend/src/__tests__/: solana.spec.ts
backend/src/controllers/: property.ts  solana.ts  user.ts
backend/src/database/: appDataSource.ts  databaseConfig.ts
backend/src/middlewares/: index.ts  property.middleware.ts  user.middleware.ts
docs/: architecture_review.md  backend_analysis.md  frontend_analysis.md  integration-roadmap.md  message.md  service.md  stayke_system_flowchart.md
stayke-contracts/: .pnp.cjs  Anchor.toml  package.json
stayke-front/: .gitignore  anchor-caller-test.html  anchor-caller.html  codama.json  derive.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
stayke-front/anchor/: Anchor.toml
stayke-front/anchor/programs/stayke/: Cargo.toml
stayke-front/anchor/programs/stayke/src/: errors.rs  lib.rs  state.rs  tests.rs  utils.rs
stayke-front/anchor/programs/stayke/src/events/: booking.rs
stayke-front/anchor/programs/stayke/src/instructions/: admin.rs  booking.rs  dispute.rs  initialize.rs  mod.rs  properties.rs  user_profile.rs
stayke-front/docs/: contract-documentation.md  frontend-analysis.md  solana-integration-guide.md
stayke-front/scripts/: transformBase64.ts
stayke-front/src/: constants.ts
(+97 files in other folders)
